helm_demo/service.yaml
apiVersion: v1
kind: Service 
metadata:
  name: my-apiservice
  labels: my-apiservice
spec:
  selector: 
    app: p1
  type: NodePort
  ports:
  - port: 3001
    protocol: TCP 
    targetPort: 3000
    NodePort: 31000
